<?xml version="1.0"?>
<package format="2">
  <name>ensenso_publisher</name>
  <version>0.0.1</version>
  <description>The ensenso_publisher package</description>

  <maintainer email="jmeyer@swri.org">Jonathan Meyer</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>godel_msgs</depend>
</package>
